samples/_failures_safe/1761550034_d91c36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e00cb47c.c: In function ‘main’:
./samples/SAFE/__tmp_e00cb47c.c:146:13: error: expected expression at end of input
  146 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_e00cb47c.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e00cb47c.c:146:13: error: expected declaration or statement at end of input
